--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=TP JAVA
+
+spring.datasource.url=jdbc:mysql://localhost:3307/spring_td?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto = create
+
+spring.sql.init.platform = data
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode = always
